# BOT

./: .editorconfig  .gitignore  README  docker-compose.yml  manage.py  package-lock.json
.github/workflows/: build-frontend.yml  lint-check.yml
backend/: configure.py  manage.py
backend/admin/: configure.py  schemas.py
backend/alembic_custom/: enum.py
backend/bot/: __init__.py  kb.py  router.py  states.py  tasks.py  text.py
backend/core/: configure.py
backend/db/: database.py  models.py  orm.py  query.py  schemas.py  service.py
backend/templates/: bid_list.html  worker_bid_details.html
common/: pyproject.toml  requirements-dev.txt  requirements.txt
common/src/common/: __init__.py
common/src/common/auth/: __init__.py  authorization.py  local.py  security.py
common/src/common/config/: __init__.py  auth.py  file.py  network.py
common/src/common/containers/: auth.py
common/src/common/contracts/clients/: __init__.py  file.py  security.py
common/src/common/http/: auth.py  file.py  retry.py
common/src/common/schemas/: __init__.py  base.py  client_credential.py  file.py
docker/: file.Dockerfile  knowledge.Dockerfile
frontend/: package.json
frontend/src/: editor.ts  parser.ts  table.ts  types.ts  viewer.ts
server/: tunnel.py
services/backend/: configure.py  settings.py
services/core/: Dockerfile  alembic.ini  manage.py  requirements.txt  settings.py
services/crm/: index.css  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
services/file/: .env.example  alembic.ini  (+3 more)
templates/: bid_details.html  bid_list.html
(+917 files in other folders)
