# Dev
[tool.ruff]
target-version = "py311"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bot_common"
version = "0.1.0"
license = { text = "MIT" }
authors = [
    { name = "Maxim Gerasimov", email = "infanasotku@gmail.com" }
]
dependencies = [
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "asyncpg==0.30.0",
    "sqlalchemy[asyncio]",
    "dependency_injector==4.45.0",
    "fastapi==0.115.3",
    "cryptography==44.0.0",
    "pyjwt[crypto]",
    "PyYAML==6.0.2",
    "pytz==2025.1"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
